Changes to broader indexes in asia, sweden and gold miners

--- a/p2.yaml
+++ b/p2.yaml
@@ -5,15 +5,15 @@ SPY:
   name: S&P 500
 EWJ:
   name: MSCI Japan
-IEEM.MI:
-  name: MSCI EM UCITS ETF USD
-XACT-SMABOLAG.ST:
-  name: Småbolag Sverige
+AAXJ:
+  name: MSCI All Country Asia excl Japan
+EWD:
+  name: MSCI Sweden
 C090.DE:
   name: Equal Weight Commodity
 IEF:
   name: 7-10 year treasury bond
-G2X.DE:
+GDX:
   name: Gold Miners
 IXC:
   name: Global Energy
