--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,51 @@
+asttokens==2.2.1
+backcall==0.2.0
 certifi==2022.9.14
 charset-normalizer==2.1.1
+comm==0.1.2
+contourpy==1.1.0
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+executing==1.2.0
+fonttools==4.40.0
 idna==3.4
+ipykernel==6.21.2
+ipython==8.11.0
+jedi==0.18.2
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+kiwisolver==1.4.4
 lxml==4.9.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
 multitasking==0.0.11
+nest-asyncio==1.5.6
 numpy==1.23.3
+packaging==23.0
 pandas==1.4.4
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==3.1.0
+prompt-toolkit==3.0.38
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.14.0
+pyparsing==3.1.0
 python-dateutil==2.8.2
 pytz==2022.2.1
 PyYAML==6.0
+pyzmq==25.0.0
 requests==2.28.1
+seaborn==0.12.2
 six==1.16.0
+stack-data==0.6.2
+tomli==2.0.1
+tornado==6.2
+traitlets==5.9.0
 urllib3==1.26.12
+wcwidth==0.2.6
 yfinance==0.1.74
