--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,94 @@
+apt-xapian-index==0.49
 asttokens==2.2.1
 backcall==0.2.0
-certifi==2022.9.14
-charset-normalizer==2.1.1
-comm==0.1.2
-contourpy==1.1.0
-cycler==0.11.0
+blinker==1.4
+certifi==2020.6.20
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+comm==0.1.3
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
 debugpy==1.6.6
 decorator==5.1.1
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
 executing==1.2.0
-fonttools==4.40.0
-idna==3.4
-ipykernel==6.21.2
-ipython==8.11.0
+galternatives==1.0.8
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+ipykernel==6.22.0
+ipython==8.12.0
 jedi==0.18.2
-jupyter_client==8.0.3
-jupyter_core==5.2.0
-kiwisolver==1.4.4
-lxml==4.9.1
-matplotlib==3.7.1
+jeepney==0.7.1
+jupyter_client==8.1.0
+jupyter_core==5.3.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lubuntu-update-notifier==0.4.dev0
 matplotlib-inline==0.1.6
-multitasking==0.0.11
+more-itertools==8.10.0
 nest-asyncio==1.5.6
-numpy==1.23.3
+netifaces==0.11.0
+numpy==1.25.1
+oauthlib==3.2.0
+olefile==0.46
 packaging==23.0
-pandas==1.4.4
+pandas==2.0.3
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.1.0
+Pillow==9.0.1
+platformdirs==3.2.0
 prompt-toolkit==3.0.38
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
-Pygments==2.14.0
-pyparsing==3.1.0
+pycairo==1.20.1
+pycups==2.0.1
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-sip==12.9.1
+python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
-pytz==2022.2.1
-PyYAML==6.0
-pyzmq==25.0.0
-requests==2.28.1
-seaborn==0.12.2
+python-debian==0.1.43+ubuntu1.1
+pytz==2023.3
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==25.0.2
+regex==2023.6.3
+reportlab==3.6.8
+requests==2.25.1
+requests-unixsocket==0.2.0
+SecretStorage==3.3.1
 six==1.16.0
+ssh-import-id==5.11
 stack-data==0.6.2
+systemd-python==234
 tomli==2.0.1
 tornado==6.2
 traitlets==5.9.0
-urllib3==1.26.12
+tzdata==2023.3
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+wadllib==1.3.6
 wcwidth==0.2.6
-yfinance==0.1.74
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
